@@ -8,6 +8,7 @@ libqapt (3.0.2-2) UNRELEASED; urgency=medium
     and prerm of gstreamer-qapt.
   * Replace the deprecated kio-dev build dependency with libkf5kio-dev.
   * Remove unused meta/upstream_scm.json file.
+  * Remove qapt-dbg in favour of the -dbgsym packages.
 
  -- Debian/Kubuntu KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Sun, 15 May 2016 19:30:43 +0200
 
